--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
               <ul>
                 <li>OSIS SMAN 5 Garut</li>
                 <li>Ikatan Pengurus OSIS Kabupaten Garut </li>
-                <li>Forum OSIS Jawa Baray</li>
+                <li>Forum OSIS Jawa Barat</li>
               </ul>
             </div>
             <div class="resume-item">
